--- a/source/styles/blocks/catalog-products.scss
+++ b/source/styles/blocks/catalog-products.scss
@@ -43,9 +43,16 @@
   color: #ffffff;
 }
 
-.catalog-products__card-button--choice {
-  text-decoration: none;
+.catalog-products__card-button-choice {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  border: none;
   background-color: #f2f2f2;
-  color: #444444;
   padding: 10px 95px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #444444;
+  text-decoration: none;
 }
