--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -1,8 +1,8 @@
-@mixin font-face($font-family, $font-weight, $font-src) {
+@mixin font-face($font-family, $font-style, $font-src) {
   @font-face {
     font-family: $font-family;
-    font-weight: $font-weight;
-    font-style: normal;
+    font-weight: 400;
+    font-style: $font-style;
     src: $font-src;
     font-display: swap;
   }
